# media-manager

./: .gitignore  readme.md
src/: CMakeLists.txt  book.cpp  book.h  collection.cpp  collection.h  main.cpp  movie.cpp  movie.h  settings.cpp  settings.h  spellChecker.cpp  spellChecker.h  tvShow.cpp  tvShow.h  ui.cpp  ui.h
